log

Thu 17 Aug 2023 08:27:41 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
410f68a
Thu 17 Aug 2023 08:28:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 10/70
5971f84
Thu 17 Aug 2023 08:29:29 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
56d1355
Thu 17 Aug 2023 08:36:11 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Thu 17 Aug 2023 08:36:41 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1ec8ebf
Thu 17 Aug 2023 08:37:46 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f313baf
Fri 18 Aug 2023 12:52:23 AM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: unused variable ‘i’ [-Werror=unused-variable]
   48 |   int i; /*create a pointer */
      |       ^
cc1: all warnings being treated as errors
Compilation failed
a3573b9
Fri 18 Aug 2023 01:11:18 AM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 20/70
b6fa6b0
Fri 18 Aug 2023 01:34:31 AM UTC: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:10: error: function returns address of local variable [-Werror=return-local-addr]
   65 |   return ptr;
      |          ^~~
exercises.c:55:7: note: declared here
   55 |   int newArr[*newSize];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
d518b7c
Fri 18 Aug 2023 01:34:52 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:10: error: returning ‘int **’ from a function with incompatible return type ‘int *’ [-Werror=incompatible-pointer-types]
   65 |   return &ptr;
      |          ^~~~
exercises.c:65:10: error: function returns address of local variable [-Werror=return-local-addr]
cc1: all warnings being treated as errors
Compilation failed
1f45537
Fri 18 Aug 2023 01:35:46 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:7: error: variable ‘newArr’ set but not used [-Werror=unused-but-set-variable]
   55 |   int newArr[*newSize];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ca906da
Fri 18 Aug 2023 01:44:45 AM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:31: error: ‘count’ undeclared (first use in this function)
   55 |   int *newArr = (int *)malloc(count * sizeof(int));
      |                               ^~~~~
exercises.c:55:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5bc7273
Fri 18 Aug 2023 01:45:04 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
222da2d
Fri 18 Aug 2023 02:08:23 AM UTC: 
 exercises.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:85:7: error: unused variable ‘resultSize’ [-Werror=unused-variable]
   85 |   int resultSize = size1+size2;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
02b6a62
Fri 18 Aug 2023 02:08:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
580a732
Fri 18 Aug 2023 02:09:32 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4488109
Fri 18 Aug 2023 02:10:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
e3d34d7
Fri 18 Aug 2023 02:24:23 AM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:127:10: error: expected ‘;’ before ‘}’ token
  127 |       i++
      |          ^
      |          ;
  128 |     }
      |     ~     
exercises.c:132:10: error: expected ‘;’ before ‘}’ token
  132 |       i++
      |          ^
      |          ;
  133 |     }
      |     ~     
Compilation failed
8a6e60d
Fri 18 Aug 2023 02:24:42 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b51baea
Fri 18 Aug 2023 02:26:25 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
f3df4aa
Fri 18 Aug 2023 02:29:15 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b35717e
Fri 18 Aug 2023 02:30:27 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
c34c9a2
Sat 19 Aug 2023 12:34:45 AM UTC: 
 exercises.c | 29 ++++++++++++++---------------
 1 file changed, 14 insertions(+), 15 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:131:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  131 |   if(ascend = 1){
      |      ^~~~~~
exercises.c:134:12: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  134 |   else if (descend = 1){
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
84fbc2f
Sat 19 Aug 2023 12:35:03 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b2088c3
Sat 19 Aug 2023 12:36:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
b72bacb
Sat 19 Aug 2023 12:43:30 AM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:535,
                 from exercises.c:5,
                 from test.c:1:
In function ‘strncpy’,
    inlined from ‘inicializarLibro’ at exercises.c:163:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:95:10: error: ‘__builtin_strncpy’ specified bound 100 equals destination size [-Werror=stringop-truncation]
   95 |   return __builtin___strncpy_chk (__dest, __src, __len,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |                                   __glibc_objsize (__dest));
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~
In function ‘strncpy’,
    inlined from ‘inicializarLibro’ at exercises.c:164:3:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:95:10: error: ‘__builtin_strncpy’ specified bound 50 equals destination size [-Werror=stringop-truncation]
   95 |   return __builtin___strncpy_chk (__dest, __src, __len,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |                                   __glibc_objsize (__dest));
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9bd89b
Sat 19 Aug 2023 12:48:42 AM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:172:1: error: expected identifier or ‘(’ before ‘}’ token
  172 | }
      | ^
Compilation failed
13ff623
Sat 19 Aug 2023 12:48:52 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
be63a66
Sat 19 Aug 2023 01:08:36 AM UTC: 
 exercises.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:197:15: error: ‘Nodo’ {aka ‘struct nodo’} has no member named ‘siguente’; did you mean ‘siguiente’?
  197 |     newNode ->siguente = NULL;
      |               ^~~~~~~~
      |               siguiente
exercises.c:204:18: error: ‘Nodo’ {aka ‘struct nodo’} has no member named ‘siguente’; did you mean ‘siguiente’?
  204 |       current -> siguente = newNode;
      |                  ^~~~~~~~
      |                  siguiente
exercises.c:205:24: error: expected ‘;’ before ‘}’ token
  205 |       current = newNode
      |                        ^
      |                        ;
  206 |     }
      |     ~                   
Compilation failed
0a6f3c1
